test/bad/arrays/spread07.px

a = [[['a']]]
b: [[[String]]] = [...a, [[""]]]
